El mejor proyecto cartadehawka One

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <script type="module" src="./main.js" defer></script>
   </head>
   <body>
-    <h1>Hola mundo genial</h1>
+    <h1>Hola mundo genial One</h1>
   </body>
 </html>
