--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
-
 <!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-    <link rel="icon" href="/vite.svg" />
-    <link rel="stylesheet" href="./style.css" />
-    <script type="module" src="./main.js" defer></script>
-  </head>
-  <body>
-    <h1>Hola mundo genial One</h1>
-  </body>
+<html lang="es"><head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="Wiimage - Plataforma de beneficios exclusivos. Únete y disfruta descuentos únicos.">
+<meta name="keywords" content="beneficios, descuentos, ofertas, recompensas">
+<link href="/logo.png" rel="icon" type="image/x-icon">
+<title>Smiles - Beneficios Exclusivos</title>
+
+<link rel="stylesheet" href="./style.css"/>
+<script type="module" src="./main.js" defer></script>
+</head>
+<body>
+<h1>Hola mundo como estas grrr</h1>
+
+<button>Consultar respuesta genial</button>
+
+</body>
 </html>
