--- a/smiletop.html
+++ b/smiletop.html
@@ -4,11 +4,12 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="robots" content="noindex, nofollow"> <!-- Privado -->
-<link href='/logo.png' rel='icon' type='image/x-icon'/> 
+<link href='/cartadehawka/logo.png' rel='icon' type='image/x-icon'/> 
 <title>Admin - Smiles</title>
-  <script type="module" crossorigin src="/cartadehawka/assets/smiletop-D9wBW-Pu.js"></script>
-  <link rel="modulepreload" crossorigin href="/cartadehawka/assets/widev-DyjqufZU.js">
-  <link rel="stylesheet" crossorigin href="/cartadehawka/assets/widev-CWZ50TrE.css">
+  <script type="module" crossorigin src="/cartadehawka/assets/smiletop-B4AUIXR1.js"></script>
+  <link rel="modulepreload" crossorigin href="/cartadehawka/assets/widev-DhbbJDfQ.js">
+  <link rel="stylesheet" crossorigin href="/cartadehawka/assets/widev-i0e8-W1S.css">
+  <link rel="stylesheet" crossorigin href="/cartadehawka/assets/style-EtqL-BZo.css">
 </head>
 <body>
 <button class="logout-btn">
