--- a/index.html
+++ b/index.html
@@ -44,72 +44,77 @@
   </div>
 
 <!-- ...existing code... -->
-  <!-- Modales -->
-  <div id="modal-about" class="modal" aria-hidden="true" role="dialog" aria-modal="true">
-    <div class="modal-dialog">
-      <button class="modal-close" aria-label="Cerrar">&times;</button>
-      <h3>Acerca del app</h3>
-      <p>Cartas Hawka permite mostrar tu menú por hojas con precios, descripciones e íconos. Optimizado para móviles y cache local.</p>
-      <ul>
+  <!-- Modales (FOOTER) -->
+  <div id="foo-about" class="foomodal" aria-hidden="true" role="dialog" aria-modal="true">
+    <div class="foo-dialog">
+      <button class="foo-close" aria-label="Cerrar">&times;</button>
+      <div class="foo-head">
+        <div class="foo-badge"><i class="fas fa-info-circle"></i></div>
+        <h3>Acerca del app</h3>
+      </div>
+      <p>Cartas Hawka permite mostrar tu menú por hojas con precios, descripciones e íconos. Optimizado para móviles y caché local.</p>
+      <ul class="foo-list">
         <li>Carga rápida con caché</li>
         <li>Soporte multi-idioma (selector en el header)</li>
         <li>Diseño responsive y accesible</li>
       </ul>
-      <button class="bts modal-ok">Entendido</button>
+      <div class="foo-actions">
+        <button class="foo-btn foo-btn--primary foo-ok">Entendido</button>
+      </div>
     </div>
   </div>
 
-  <div id="modal-priv" class="modal" aria-hidden="true" role="dialog" aria-modal="true">
-    <div class="modal-dialog">
-      <button class="modal-close" aria-label="Cerrar">&times;</button>
-      <h3>Políticas de privacidad</h3>
-      <p>No recopilamos datos personales sin tu consentimiento. El contenido del menú se procesa y cachea en tu navegador.</p>
-      <ul>
+  <div id="foo-priv" class="foomodal" aria-hidden="true" role="dialog" aria-modal="true">
+    <div class="foo-dialog">
+      <button class="foo-close" aria-label="Cerrar">&times;</button>
+      <div class="foo-head">
+        <div class="foo-badge"><i class="fas fa-user-shield"></i></div>
+        <h3>Políticas de privacidad</h3>
+      </div>
+      <p>No recopilamos datos personales sin tu consentimiento. El contenido del menú se procesa y se cachea en tu navegador.</p>
+      <ul class="foo-list">
         <li>Sin cookies de rastreo</li>
         <li>Control local de caché (Ctrl+Shift+R para limpiar)</li>
         <li>Imágenes con carga diferida (lazy)</li>
       </ul>
-      <button class="bts modal-ok">Entendido</button>
+      <div class="foo-actions">
+        <button class="foo-btn foo-btn--primary foo-ok">Entendido</button>
+      </div>
     </div>
   </div>
 
-  <div id="modal-recl" class="modal" aria-hidden="true" role="dialog" aria-modal="true">
-    <div class="modal-dialog">
-      <button class="modal-close" aria-label="Cerrar">&times;</button>
-      <div class="modal-header">
-        <img src="./libroReclamos.png" alt="Libro de Reclamaciones" class="recl-image">
+  <div id="foo-recl" class="foomodal" aria-hidden="true" role="dialog" aria-modal="true">
+    <div class="foo-dialog">
+      <button class="foo-close" aria-label="Cerrar">&times;</button>
+      <div class="foo-head">
+        <img src="./libroReclamos.png" alt="Libro de Reclamaciones" class="foo-hero">
         <h3>Libro de reclamaciones</h3>
       </div>
-      <form id="reclamosForm" novalidate>
-        <div class="form-grid">
-          <label>
-            Nombres y apellidos
+      <form id="reclamosForm" class="foo-form" novalidate>
+        <div class="foo-grid">
+          <label> Nombres y apellidos
             <input name="nombres" type="text" required placeholder="Tu nombre completo" />
           </label>
-          <label>
-            Email
+          <label> Email
             <input name="email" type="email" required placeholder="tucorreo@dominio.com" />
           </label>
-          <label>
-            Teléfono
+          <label> Teléfono
             <input name="telefono" type="tel" placeholder="+51 999 999 999" />
           </label>
-          <label>
-            N° pedido (opcional)
+          <label> N° pedido (opcional)
             <input name="pedido" type="text" placeholder="Ej: A123" />
           </label>
-          <label class="span-2">
-            Detalle del reclamo
+          <label class="foo-span2"> Detalle del reclamo
             <textarea name="detalle" required rows="4" placeholder="Describe tu reclamo..."></textarea>
           </label>
-          <label class="span-2 chk">
+          <label class="foo-span2 foo-chk">
             <input type="checkbox" name="consent" required />
             Acepto el uso de mis datos para dar seguimiento a mi reclamo.
           </label>
         </div>
-        <div class="modal-actions">
-          <button type="button" class="btn-secondary modal-cancel">Cancelar</button>
-          <button type="submit" class="btn-primary">Enviar</button>
+        <div class="foo-actions">
+          <button type="button" class="foo-btn foo-btn--ghost foo-cancel">Cancelar</button>
+          <button type="submit" class="foo-btn foo-btn--primary">Enviar</button>
         </div>
       </form>
     </div>
@@ -117,24 +122,23 @@
 
   <footer class="foo">
     <div class="foo-inner">
-      <!-- 1ra fila: Créditos -->
-      <div class="brand">
-        Creado con <i class="fa fa-heart"></i> por
-        <a class="lkme" href="https://wtaype.github.io/" target="_blank" rel="noopener">@wilder.taype</a>
-        <span class="sep">|</span> <span class="wty">2025</span>
-      </div>
-      
       <!-- 2da fila: Enlaces -->
       <nav class="foo-links">
-        <button class="lk about" data-modal="#modal-about" type="button">Acerca del app</button>
-        <button class="lk priv" data-modal="#modal-priv" type="button">Políticas de privacidad</button>
-        <button class="lk recl" data-modal="#modal-recl" type="button">Libro de reclamaciones</button>
-        <a class="lk login" href="/admin" rel="nofollow">Login</a>
+        <button class="lk about" data-foomodal="#foo-about" type="button">Acerca del app</button>
+        <button class="lk priv" data-foomodal="#foo-priv" type="button">Políticas de privacidad</button>
+        <button class="lk recl" data-foomodal="#foo-recl" type="button">Libro de reclamaciones</button>
       </nav>
       
       <!-- 3ra fila: Imagen de reclamos -->
       <div class="recl-footer">
-        <img src="./libroReclamos.png" alt="Libro de Reclamaciones" class="recl-footer-image" data-modal="#modal-recl">
+        <img src="./libroReclamos.png" alt="Libro de Reclamaciones" class="recl-footer-image" data-foomodal="#foo-recl">
+      </div>
+
+      <!-- 1ra fila: Créditos -->
+      <div class="brand">
+        Creado con <i class="fa fa-heart"></i> por
+        <a class="lkme" href="https://wtaype.github.io/" target="_blank" rel="noopener">@wilder.taype</a>
+        | <span class="Login"> Login</span> | <span class="wty">2025</span>
       </div>
     </div>
   </footer>
