--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
     <div class="midw_v1">
         <div class="wilang-trigger">
             <div class="wilang-selected">
-                <img src="https://www.svgrepo.com/show/508668/flag-for-flag-spain.svg" alt="Spanish" class="flag-icon">
+                <img src="https://www.svgrepo.com/show/405610/flag-for-flag-spain.svg" alt="Spanish" class="flag-icon">
                 <span>Español</span>
             </div>
             <i class="fas fa-chevron-down"></i>
         </div>
         <div class="wilang-content">
-          <div class="wilang-item" data-lang="es" data-url="https://cartadehawka.web.app/?es">
+          <div class="wilang-item" data-lang="es" data-url="https://cartadehawka.web.app">
             <img src="https://www.svgrepo.com/show/405610/flag-for-flag-spain.svg" alt="Spanish" class="flag-icon">
             <span>Español</span>
           </div>
-          <div class="wilang-item" data-lang="en" data-url="https://coffeehawka.web.app?en">
+          <div class="wilang-item" data-lang="en" data-url="https://coffeehawka.web.app">
               <img src="https://www.svgrepo.com/show/508668/flag-us.svg" alt="English" class="flag-icon">
               <span>English</span>
           </div>
