--- a/libroreclamaciones.html
+++ b/libroreclamaciones.html
@@ -5,8 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title data-es="Libro de Reclamaciones" data-en="Complaints Book">Libro de Reclamaciones</title>
   <link rel="stylesheet" href="./estilos.css" />
-  <link rel="icon" href="./img/logo-almabonita.jpeg"/>
+  <link rel="icon" href="/logo.png"/>
+  <script type="module" src="./librorecl.js" defer></script>
     <style>
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,500;0,600;0,700;0,800;0,900;1,500;1,700&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap");
+
     :root{
   --primary:#f8cd04;
   --primary-600:#e6b800;
@@ -19,7 +22,7 @@
 }
 
 *{box-sizing:border-box}
-html,body{margin:0;padding:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,'Helvetica Neue',Arial,sans-serif;color:var(--text);background:#fff;line-height:1.45}
+html,body{margin:0;padding:0;font-family:'Poppins',system-ui;color:var(--text);background:#fff;line-height:1.45}
 a{color:#0a66c2;text-decoration:none}
 a:hover{text-decoration:underline}
 
@@ -100,7 +103,6 @@ hr{border:0;border-top:1px solid var(--border);margin:14px 0}
   .form-row-2{grid-template-columns:1fr}
   .form-row-3{grid-template-columns:1fr}
 }
-```// filepath: c:\Users\wilde\Documents\MDRIVE\AMGIT\amwil\cartadehawka\estilos.css
 :root{
   --primary:#f8cd04;
   --primary-600:#e6b800;
@@ -112,8 +114,8 @@ hr{border:0;border-top:1px solid var(--border);margin:14px 0}
   --error:#c52828;
 }
 
-*{box-sizing:border-box}
-html,body{margin:0;padding:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,'Helvetica Neue',Arial,sans-serif;color:var(--text);background:#fff;line-height:1.45}
+*{box-sizing:border-box;font-family:'Poppins',system-ui;}
+html,body{margin:0;padding:0;color:var(--text);background:#fff;line-height:1.45}
 a{color:#0a66c2;text-decoration:none}
 a:hover{text-decoration:underline}
 
@@ -483,7 +485,5 @@ hr{border:0;border-top:1px solid var(--border);margin:14px 0}
   </div>
 
   <!-- Scripts -->
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="./librorecl.js"></script>
 </body>
 </html>
