--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="theme-color" content="#f8cd04">
-  <title>Cafetería Hawka - Ica</title>
+  <title>Menu - Cafetería Hawka </title>
   <link rel="icon" href="/logo.png" />
   <link rel="stylesheet" href="./style.css" />
   <script type="module" src="./main.js" defer></script>
@@ -13,17 +13,9 @@
   </style>
 </head>
 <body>
-  <!-- Contenido dinámico del menú -->
   <div id="menu-app">
       <div class="loadingSmile"><img src="./smile.png" alt="Avatar" class="user-avatar"/></div>
   </div>
-
-<!-- ...existing code... -->
-  
-<!-- ...existing code... -->
-
-
-
 </body>
 </html>
 
