--- a/smiletop.html
+++ b/smiletop.html
@@ -5,8 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="robots" content="noindex, nofollow"> <!-- Privado -->
 <link href='/logo.png' rel='icon' type='image/x-icon'/>
-<link rel="stylesheet" href="./style.css" />
-<script type="module" src="./smiletop.js" defer></script> 
+<link rel="stylesheet" href="./smile/smiletop.css" />
+<script type="module" src="./smile/smiletop.js" defer></script> 
 <title>Admin - Smiles</title>
 </head>
 <body>
