deploy: 13ed51f9f86ea5209f25daee08381320dfb4db59

--- a/smiletop.html
+++ b/smiletop.html
@@ -4,13 +4,10 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="robots" content="noindex, nofollow"> <!-- Privado -->
-<link href='/cartadehawka/logo.png' rel='icon' type='image/x-icon'/> 
+<link href='/cartadehawka/logo.png' rel='icon' type='image/x-icon'/>
+<link rel="stylesheet" href="./smile/smiletop.css" /> 
 <title>Admin - Smiles</title>
-  <script type="module" crossorigin src="/cartadehawka/assets/smiletop-CooBheHq.js"></script>
-  <link rel="modulepreload" crossorigin href="/cartadehawka/assets/widev-BM5yT9qV.js">
-  <link rel="modulepreload" crossorigin href="/cartadehawka/assets/init-Cp9lDRip.js">
-  <link rel="stylesheet" crossorigin href="/cartadehawka/assets/widev-i0e8-W1S.css">
-  <link rel="stylesheet" crossorigin href="/cartadehawka/assets/style-jecNHYpg.css">
+  <script type="module" crossorigin src="/cartadehawka/assets/modulepreload-polyfill-B5Qt9EMX.js"></script>
 </head>
 <body>
 <button class="logout-btn">
